--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.2",
+    "mongoose-unique-validator": "^3.1.0",
+    "validator": "^13.9.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
